fix: overflow

--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 
 html,
 body {
-    height: 99.5%;
+    overflow: hidden;
+    height: 100%;
 }
 
 body {
